2005-06-13  Jedy Wang  <jedy.wang@sun.com>

	We need compare backend for long events too.

	* gui/e-day-view.c: (e_day_view_find_event_from_uid):

2005-05-30  Harry Lu  <harry.lu@sun.com>

	* gui/itip-utils.c: (itip_send_comp): check whether backend could
	handle sending resuests/updates, and if so, just return.

2005-05-09  Rodrigo Moya <rodrigo@novell.com>

	Fixes #301350

	* gui/alarm-notify/alarm-queue.c (alarm_queue_init): install a timeout
	handler to check, every 30 minutes, for not losing the midnight refresh.
	(check_midnight_refresh): check the midnight refresh and if we missed it,
	reload alarms.
	(queue_midnight_refresh): made the midnight value be global.

2005-05-09  Rodrigo Moya <rodrigo@novell.com>

	* gui/migration.c (migrate_ical_folder_to_source): cover the case when
	there is no calendar.ics/tasks.ics file in the folder to migrate.
		
2005-05-01  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #274406
	* gui/alarm-notify/alarm-notify.c: (cal_opened_cb): Removed the
       	additional unref present.

2005-04-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #274476
	* gui/e-calendar-view.c: (e_calendar_view_open_event): Send the
	right value boolean variable meeting to e_calendar_view_edit_appointment
	method.

2005-04-08  Rodrigo Moya <rodrigo@novell.com>

	Fixes #70035

	* importers/icalendar-importer.c (support_format_fn, load_file_fn):
	use e_cal_util_parse_ics_string instead of icalparser_parse_string.

2005-04-05  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/e-cal-model.c: (cal_opened_cb): If the status
	is busy call open method again, do not remove the
	client.
	
	* gui/gnome-cal.c: (client_cal_opened_cb),
	(default_client_cal_opened_cb): IF the status is busy
	and the load_state is not loaded call open method.

2005-04-06  Chenthill Palanisamy  <pchenthill@novell.com>
	
	Fixes #73508
	* gui/dialogs/meeting-page.c: (meeting_page_fill_widgets): Set the 